# pysoc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: generate_sample_data.py
data/generator/: README.md  __init__.py  generate_logs.py
data/output/: report.html  report.json
data/raw/: impossible_travel.jsonl  windows_events.json
data/sample/: windows_events.json
data/sample_logs/: manifest.json  windows.jsonl
docs/: ARCHITECTURE.md  DETECTION_RULES.md  DEVELOPMENT.md  FALSE_POSITIVES.md  ROADMAP.md  false_positive_notes.md  issues.md  todo.md
examples/: custom_rule.py  run_pysoc.py
screenshots/: README.md
scripts/: run_all.sh  scaffold.py
src/pysoc/: __init__.py  __main__.py  cli.py  geo.py  ingest.py  models.py  parser.py  pipeline.py
src/pysoc/detect/: __init__.py  base.py  brute_force.py  impossible_travel.py  suspicious_process.py  web_attacks.py
src/pysoc/parsers/: __init__.py  apache.py  base.py  json_parser.py  linux_auth.py  nginx.py  windows_json.py
src/pysoc/report/: __init__.py  base.py  html_reporter.py  json_reporter.py
tests/: conftest.py  test_compat.py
tests/integration/: __init__.py  test_data_generator.py  test_end_to_end.py
tests/unit/: __init__.py  test_detect_brute_force.py  test_detect_impossible_travel.py  test_detect_suspicious_process.py  test_detect_web_attacks.py  test_ingest.py  test_models.py  test_parsers.py  test_report.py
