[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysoc"
version = "1.0.0"
description = "A local-first mini Security Operations Center (SOC) and detection engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PySOC Contributors" }]
keywords = ["security", "soc", "detection-engine", "siem", "log-analysis", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    # PySOC intentionally has zero runtime dependencies — only the standard
    # library is required. This keeps the install footprint tiny and makes
    # the tool trivially portable to air-gapped environments.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/example/pysoc"
Repository = "https://github.com/example/pysoc"
Documentation = "https://github.com/example/pysoc/tree/main/docs"

[project.scripts]
pysoc = "pysoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: end-to-end integration tests",
    "slow: slow tests",
]
